--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -5,13 +5,33 @@
 
 body{
     background-color: wheat;
-    background-image: url(/UI/images/group-business-peoplebusiness-people-sharing-600w-502885915.webp);
+    background-image: url(/UI/images/photo-1496483648148-47c686dc86a8.jpg)no repeat;
 }
+/* .header{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+} */
 
 .logo{
-    height: 10%;
+    height: 15%;
     width:10%;
+    margin-right:0px;
     
+}
+#project{
+    color: bisque;
+     font-size: 25px; 
+    padding: 30px;
+    margin-left: 0px;
+    align-items: flex-start;
+}
+
+.container{
+    width: 80%;
+    margin: auto;
+    overflow: hidden;
 }
 nav ul{
     list-style-type: none;
@@ -23,24 +43,28 @@ nav li{
     flex: 1 0 auto;
 }
 nav li a{
-    display:block;
-    padding:10px;
-    font-size: 25px;
+    display:flex;
+    padding:30px;
+    margin: 10px;
+    flex-grow: 1;
+    /* flex: 1 0 50px; */
+     font-size:25px; 
     text-decoration: none;
-    text-align: center;
+    /* text-align: start; */
     color:bisque;
 }
 
-nav{
+ nav{
     background-color:rgb(34, 26, 44);
 
-}
+} 
 .nav-menu{
     flex-grow:grow; 
+    flex: 1 0 auto;
 }
-nav li a:hover{
-    background-color: rgba(230,122,0,0,3);
-}
+/* nav li a:hover{
+    background-color: rgba(230,122,0,0.3);
+} */
 .content{
 
     display:flex;
@@ -51,4 +75,27 @@ nav li a:hover{
 .content h1{
     font-size: 25px;
     margin-left:180px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer{
+    text-align: center;
+    display:flex;
+    flex: 1 0 auto;
 }
